# clover_ui

./: Cargo.toml  README.md
assets/shaders/: basic.wgsl
clover_ui_core/: Cargo.toml
clover_ui_core/src/: context.rs
clover_ui_core/src/element/: element.rs  mod.rs
clover_ui_core/src/paint/: mod.rs  painter.rs  primitives.rs
clover_ui_core/src/state/: keys.rs  mod.rs  mouse.rs
clover_ui_core/src/style/: color.rs  properties.rs  spacing.rs  style_sheet.rs
clover_ui_core/src/style/presets/: colors.rs
clover_ui_core/src/ui/: mod.rs
clover_ui_core/src/ui/presets/: layout.rs  widget.rs
clover_ui_webgpu/: Cargo.toml
clover_ui_webgpu/src/: lib.rs  main.rs  shader.wgsl
examples/: main_menu.rs
examples/widgets/: Cargo.toml
examples/widgets/src/: main.rs  shader.wgsl
src/: component.rs  context.rs  element.rs  layout.rs  lib.rs  main.rs  ui.rs
src/core/: app.rs  box_model.rs  context.rs  mod.rs  node.rs
src/core/render/: mod.rs  primitive.rs
src/element/: element.rs  element_builder.rs  element_state.rs  mod.rs
src/event/: event.rs
src/events/: events.rs
src/layout/: border.rs  color.rs  layout.rs  layout_builder.rs  mod.rs  spacing.rs
src/layout/display/: display.rs  flex.rs
src/nodes/: base_node.rs  mod.rs  text_node.rs
src/paint/: mod.rs  painter.rs  primitives.rs
src/state/: keys.rs  mod.rs  mouse.rs
src/style/: border.rs  color.rs  font.rs  font_manager.rs  layout.rs  mod.rs  properties.rs  spacing.rs  style.rs  style_builder.rs  style_sheet.rs
src/style/display/: align.rs  display.rs  (+2 more)
src/styles/: bounds.rs  color.rs  font_db.rs  font_family.rs  font_weight.rs  mod.rs  position.rs  spacing.rs  unit.rs
src/ui/: computes.rs  dispatch.rs  event_binding.rs  mod.rs  presets.rs  ui.rs
src/util_macros/: Cargo.toml
(+8 files in other folders)
