[package]
name = "clover_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"
rusttype = "0.9.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.4.0"
util_macros = {path = "./src/util_macros"}
