[package]
name = "clover_ui_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
lazy_static = "1.4.0"
enum2map = "0.1.0"

[features]
primitive_shapes = []
primitive_vertex = []
