[package]
name = "clover_ui_webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clover_ui_core = { path = "../clover_ui_core", features = ["primitive_vertex"] }

bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.28.6"
